--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 USER=fazliddin2001
 PORT=3000
+DATABASE=mongodb+srv://fazliddin2001:<PASSWORD>@cluster0.rtxeuav.mongodb.net/natours-test?retryWrites=true&w=majority
 DATABASE_PASSWORD = Fx20010109
