--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=production & nodemon server.js",
+    "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js"
   },
   "dependencies": {
