--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "debug": "ndb server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^5.13.20",
