--- a/config.env
+++ b/config.env
@@ -3,3 +3,5 @@ USER=fazliddin2001
 PORT=3000
 DATABASE=mongodb+srv://fazliddin2001:<PASSWORD>@cluster0.rtxeuav.mongodb.net/natours-test?retryWrites=true&w=majority
 DATABASE_PASSWORD = Fx20010109
+JWT_SECRET=fazliddin-xakimov-uzbekistan
+JWT_EXPIRES_IN=90d
