--- a/config.env
+++ b/config.env
@@ -5,3 +5,9 @@ DATABASE=mongodb+srv://fazliddin2001:<PASSWORD>@cluster0.rtxeuav.mongodb.net/nat
 DATABASE_PASSWORD = Fx20010109
 JWT_SECRET=fazliddin-xakimov-uzbekistan
 JWT_EXPIRES_IN=90d
+
+
+EMAIL_USERNAME =cbe4f90e81ae47
+EMAIL_PASSWORD =6e9bcf4ddae254
+EMAIL_HOST =sandbox.smtp.mailtrap.io
+EMAIL_PORT =2525
