--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD = Fx20010109
 JWT_SECRET=fazliddin-xakimov-uzbekistan
 JWT_EXPIRES_IN=90d
 
+JWT_COOKIE_EXPIRES_IN = 90
 
 EMAIL_USERNAME =cbe4f90e81ae47
 EMAIL_PASSWORD =6e9bcf4ddae254
